src/objects/PublicCalendar__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Stores public calendar names and IDs since SFDC hasn&apos;t exposed the public calendar details for SOQL access</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GTM__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is this a Go To Market calendar?</inlineHelpText>
        <label>GTM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Public calendar ID</inlineHelpText>
        <label>ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Public Calendars</label>
</CustomObject>